--- a/COREVUE/ClientApp/package.json
+++ b/COREVUE/ClientApp/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.4.3",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "3.4.5",
+    "axios": "0.20.0",
+    "web-pack": "1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
