--- a/COREVUE/appsettings.json
+++ b/COREVUE/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "Jwt": {
+    "SecurityKey": "mysecuritykeyishere",
+    "TokenExpirationDays": 1,
+    "RefreshTokenExpirationDays": 1
+  },
+  "AllowedHosts": "*",
+  "DbSettings": {
+    "SqlConnection": "Server=localhost; Database=corevue; Port=3306; Uid=root; Pwd='';"
+  }
 }
