--- a/COREVUE/ClientApp/package.json
+++ b/COREVUE/ClientApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clientapp",
+  "name": "bootstrap-vue-netcore",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,10 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.4.3",
-    "vue": "^2.6.10",
-    "vue-router": "3.4.5",
     "axios": "0.20.0",
+    "bootstrap": "^4.5.2",
+    "bootstrap-vue": "^2.17.3",
+    "core-js": "^3.4.3",
+    "popper.js": "^1.16.1",
+    "portal-vue": "^2.1.7",
+    "vue": "^2.6.12",
+    "vue-axios": "^2.1.5",
+    "vue-router": "3.4.5",
+    "vuex": "^3.5.1",
+    "vuex-persistedstate": "^3.1.0",
     "web-pack": "1.0.0"
   },
   "devDependencies": {
@@ -21,7 +28,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
     "root": true,
