--- a/SAMPLE/ClientApps/Vue/package.json
+++ b/SAMPLE/ClientApps/Vue/package.json
@@ -16,6 +16,7 @@
     "portal-vue": "^2.1.7",
     "vue": "^2.6.12",
     "vue-axios": "^2.1.5",
+    "vue-json-excel": "^0.3.0",
     "vue-router": "3.4.5",
     "vuex": "^3.5.1",
     "vuex-persistedstate": "^3.1.0",
