--- a/SAMPLE/ClientApps/Vue/package.json
+++ b/SAMPLE/ClientApps/Vue/package.json
@@ -8,29 +8,29 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "0.20.0",
-    "bootstrap": "^4.5.2",
-    "bootstrap-vue": "^2.17.3",
-    "core-js": "^3.4.3",
-    "popper.js": "^1.16.1",
-    "portal-vue": "^2.1.7",
-    "vue": "^2.6.12",
-    "vue-axios": "^2.1.5",
-    "vue-json-excel": "^0.3.0",
-    "vue-router": "3.4.5",
-    "vuex": "^3.5.1",
-    "vuex-persistedstate": "^3.1.0",
+    "axios": "0.24.0",
+    "core-js": "3.20.1",
+    "portal-vue": "3.0.0-alpha.0",
+    "tailwind": "^4.0.0",
+    "vue": "3.2.26",
+    "vue-json-excel": "0.3.0",
+    "vue-router": "4.0.12",
+    "vuex": "4.0.2",
+    "vuex-persistedstate": "4.1.0",
     "web-pack": "1.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.12",
-    "prettier": "^2.1.2"
+    "@vue/cli-plugin-babel": "5.0.0-rc.1",
+    "@vue/cli-plugin-eslint": "5.0.0-rc.1",
+    "@vue/cli-service": "5.0.0-rc.1",
+    "autoprefixer": "^10.4.0",
+    "babel-eslint": "11.0.0-beta.2",
+    "eslint": "8.5.0",
+    "eslint-plugin-vue": "8.2.0",
+    "postcss": "^8.4.5",
+    "prettier": "2.5.1",
+    "tailwindcss": "^3.0.7",
+    "vue-template-compiler": "2.6.14"
   },
   "eslintConfig": {
     "root": true,
